<resources>
    <string name="app_name">simplyWOD</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="voiceN">Voice</string>
    <string name="search">Search workouts...</string>
    <string name="videoN">video note</string>
    <string name="starttime">00</string>
    <string name="tabata_starttime">00</string>
    <string name="tabata_rounds">00</string>
    <string name="restore_database">Restore database</string>
    <string name="select_time">00</string>
    <string name="add_photo">Add photo</string>
    <string name="minutes">minutes</string>
    <string name="settings">Settings</string>
    <string name="select_date">Select date</string>
    <string name="ok">ok</string>
    <string name="previous">Previous</string>
    <string name="min_sec">00:00</string>
    <string name="tap">Tap to start</string>
    <string name="amrap">AMRAP</string>
    <string name="amprap">AMRAP</string>
    <string name="log">WORKOUT LOG</string>
    <string name="log_desc">WORKOUT LOGS</string>
    <string name="submit">Submit</string>
    <string name="clear">Clear form</string>
    <string name="request_features">Request features</string>
    <string name="Your_feature_request">Your feature request</string>
    <string name="Additional_context">Additional context about your request</string>
    <string name="give_context">Giving more context about your request helps us to improve the app even better.</string>
    <string name="would_you">Would you be willing to answer more questions about your request? If yes, please leave us your name and e-mail address so that we can reach you. Thank you!</string>
    <string name="rate_app">Rate the app</string>
    <string name="recommend_app">Recommend the app</string>
    <string name="analytics">Analytics</string>
    <string name="workout_logs">Workout log</string>
    <string name="home">Home</string>
    <string name="ft_counter">0</string>
    <string name="ib_desc">ImageButton</string>
    <string name="tabata">TABATA</string>
    <string name="duration">add time</string>
    <string name="change_language">Change language</string>
    <string name="select_language">select language</string>
    <string name="reset">reset</string>
    <string name="cancel">Cancel</string>
    <string name="round_counter">counter</string>
    <string name="emom">EMOM</string>
    <string name="for_time">FOR TIME</string>
    <string name="work">Work (in sec)</string>
    <string name="rest">Rest (in sec)</string>
    <string name="as_many">As many rounds as possible in</string>
    <string name="fortime">As fast as possible for time</string>
    <string name="timecap">Time cap in minutes: </string>
    <string name="every_minute">Every Minute On Minute</string>
    <string name="rounds">For (Minutes)</string>
    <string name="seconds">Every (Seconds)</string>
    <string name="record_voice_note">Record voice note</string>
    <string name="record_video_note">Record video note</string>
    <string name="play_voice_note">Play voice note</string>
    <string name="play_video_note">Play video note</string>
    <string name="banner_id">ca-app-pub-5017806087809123~7144102588</string>
    <string name="banner_id_1">ca-app-pub-5017806087809123/7456762073</string>
    <string name="workout_type_distribution">Workout Type Distribution</string>
    <string-array name="workout_types">
        <item>AMRAP</item>
        <item>TABATA</item>
        <item>EMOM</item>
        <item>For Time</item>
        <item>RFT</item>
    </string-array>
    <string name="progress_over_time">Progress Over Time</string>
    <string name="total_duration">Total Duration</string>
    <string name="upgrade_now">Upgrade now</string>
    <string name="single_payment">Single Payment</string>
    <string name="unlock_features">Unlock all premium features</string>
    <string name="remove_adds">Remove all ads</string>
    <string name="month">Month</string>
    <string name="months">Months</string>
    <string name="fit_ever">Fit4ever</string>
    <string name="Manage_Subscription">Manage My Subscription</string>
    <string name="per_year">£9.99 per year. Cancel anytime. Terms apply</string>
    <string name="yearly">Yearly</string>
    <string name="most_popular">Most Popular</string>
    <string name="subscription_page">Subscription page</string>
    <string name="train_with"> Train with SmartWOD without seeing any annoying ads.</string>
    <string name="access_analytics">Access to Analytics to track your progress.</string>
    <string name="customize_analytics">Customize your app by adding Analytics to help you track your progress.</string>
    <string name="backgrouns_image">Set your own background image.</string>
    <string name="customize_backgrouns_image"> Customize your app by setting your own background image.</string>
    <string name="and_even_more"> And there\'s even more!</string>
    <string name="back_up_data"> Back up your data, export log, add pictures to log – and stay tuned for more!</string>
    <string name="personal_records">Personal Records</string>
    <string name="premium_required_message">Upgrade to Premium to access %s features</string>
    <string name="total_workouts">Total Workouts</string>
    <string name="longest_session">Longest Session</string>
    <string name="change_layout_background">Change background image</string>
    <string name="one_off">Lifetime</string>
    <string name="tw_months">Months</string>
    <string name="one_month">Month</string>
    <string name="achievements">Achievements</string>
    <string name="simplywod_premium">SimplyWOD Timer Premium</string>
    <string name="workout_deleted">Workout deleted</string>
    <string name="failed_to_delete_workout">Failed to delete workout</string>
    <string name="performance_summary">Performance Summary</string>
    <string name="No_workout_data">No workout data available</string>
    <string name="set_tabata_timer">Set your Tabata Timer</string>
    <string name="delete_msg">Are you sure you want to delete this workout record?</string>
    <string name="delete_title">Delete Workout</string>
    <string name="delete">Delete</string>
    <string name="achievement_icon">Achievement icon</string>
    <string name="timer">Timer</string>
    <string-array name="filter_options">
        <item>All Time</item>
        <item>Last Week</item>
        <item>Last Month</item>
        <item>Last Year</item>
    </string-array>
    <string-array name="meal_types">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snack</item>
        <item>Water</item>
    </string-array>
    <string name="select_workout_type">Select Workout Type</string>
    <string name="lorem_ipsum"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a, ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae, molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor bibendum, vel congue leo egestas.\n\n Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel, molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula, in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque est.\n\n Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh. Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc, quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus convallis.\n\n Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper, libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim. </string>
    <string name="title_activity_request_feature">Request Feature</string>
</resources>