<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context=".fitwod.Menu_Activity">

<!--
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView_main"
        android:layout_width="399dp"
        android:layout_height="54dp"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_id_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.950" />-->


    <Button
        android:id="@+id/emom"
        android:layout_width="253dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_custom_selector"
        android:padding="16dp"
        android:text="@string/emom"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amrap"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/tabata"
        android:layout_width="253dp"
        android:layout_height="48dp"
        android:background="@drawable/button_custom_selector_tabata"
        android:padding="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/tabata"
        android:textColor="@android:color/white"
        android:contentDescription="tabata"
        app:layout_constraintBottom_toBottomOf="@+id/adView_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fortime"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/amrap"
        android:layout_width="253dp"
        android:layout_height="48dp"
        android:layout_marginTop="110dp"
        android:background="@drawable/button_custom_selector_amrap"
        android:padding="16dp"
        android:text="@string/amrap"
        android:textColor="@android:color/white"
        android:contentDescription="@string/amrap"
        app:layout_constraintBottom_toBottomOf="@+id/adView_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvsimplywod"
        app:layout_constraintVertical_bias="0.0"  />
    <Button
        android:id="@+id/fortime"
        android:layout_width="253dp"
        android:layout_height="48dp"
        android:background="@drawable/button_custom_selector_fortime"
        android:padding="16dp"
        android:text="@string/for_time"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/white"
        android:contentDescription="fortime"
        app:layout_constraintBottom_toBottomOf="@+id/adView_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emom"
        app:layout_constraintVertical_bias="0.0" />





    <ImageButton
        android:id="@+id/btnAnalytics"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/analytics"
        android:contentDescription="@string/log_desc"
        android:visibility="gone"
        ads:layout_constraintBottom_toTopOf="@+id/adView_main"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintHorizontal_bias="0.217"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toBottomOf="@+id/tabata"
        ads:layout_constraintVertical_bias="0.0" />




    <TextView
        android:id="@+id/tvsimplywod"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="simplywod"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011" />

    <TextView
        android:id="@+id/tvlogReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log"
        android:textColor="@color/white"
        android:textSize="14sp"
        ads:layout_constraintBottom_toTopOf="@+id/adView_main"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintHorizontal_bias="0.495"
        ads:layout_constraintStart_toEndOf="@+id/btnAnalytics"
        ads:layout_constraintTop_toBottomOf="@+id/tabata"
        ads:layout_constraintVertical_bias="0.457" />

    <TextView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:gravity="center"
        android:text="@string/timer"
        android:textColor="@color/white"
        android:textSize="15sp"
        ads:layout_constraintBottom_toTopOf="@+id/amrap"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintHorizontal_bias="0.497"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toBottomOf="@+id/tvsimplywod"
        ads:layout_constraintVertical_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/menu_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="Menu"
        android:src="@drawable/ic_menu"
        ads:layout_constraintBottom_toTopOf="@+id/tvsimplywod"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintHorizontal_bias="0.015"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent"
        ads:layout_constraintVertical_bias="0.085" />
</androidx.constraintlayout.widget.ConstraintLayout>